# HC_IME

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  get_mode.sh  quality_report.txt  run_test.sh  run_test2.sh  run_test3.sh
data/: SOURCES.md  cake_gao_chunom.chars.dict.yaml  chu_nom.dict.yaml
docs/: IME_RESEARCH_GAPS.md  STATUS.md
hc_core/: Cargo.toml  tests_telex.rs  tests_vni_workflow.rs
hc_core/src/: compose.rs  han_nom.rs  language.rs  lib.rs  quick_consonants.rs  session.rs  test_helpers.rs  tests.rs  transform.rs  types.rs  vowel.rs
linux_fcitx5/: CMakeLists.txt
linux_fcitx5/fcitx/: hcime-inputmethod.conf  hcime-telex.conf  hcime-viqr.conf  hcime-vni.conf  hcime.conf
linux_fcitx5/include/hcime/: hc_core_ffi.h
linux_fcitx5/src/: hcime.cpp
linux_fcitx5/tests/: bridge_probe.cpp
scripts/: Cargo.toml  build_nom_dict.rs  e2e-smoke.sh  install-debian.sh  install.sh
